--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -80,6 +80,7 @@
         align-items: center;
         height: 52px;
         cursor: pointer;
+        outline: none;
     }
     
     .nav-bar-icon {
