--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -36,7 +36,7 @@
             </div>
             <div class="account-navbar-item" (click)="accountSelect.open()">
                 <mat-icon class="account-icon">account_circle</mat-icon>
-                <mat-select #accountSelect style="visibility: hidden; font-size: smaller;">
+                <mat-select #accountSelect style="visibility: hidden; font-size: smaller;" class="select">
                     <mat-option (click)="open('profile')">
                         <mat-icon>person</mat-icon>
                         <span> Profil </span>
