--- a/src/app/modules/home-actors/home-actors.component.css
+++ b/src/app/modules/home-actors/home-actors.component.css
@@ -270,7 +270,7 @@
     border-radius: 22px;
     margin: 0 10px;
     padding: 6px 10px;
-    height: 31px;
+    height: auto;
     font-size: 0.8em;
     /* background-color: #f2f3f5;*/
 }
@@ -281,6 +281,7 @@
     color: #385898;
     cursor: pointer;
     text-decoration: none;
+    margin: 0;
 }
 
 .comment-text {
@@ -352,10 +353,24 @@
     cursor: pointer;
 }
 
-::ng-deep .mat-select-panel {
+/*::ng-deep .mat-select-panel {
     position: relative !important;
     top: 32px !important;
     right: 0 !important;
+}*/
+
+.select {
+    position: relative !important;
+    top: 32px;
+    right: 40px;
+    max-height: 61vh !important;
+}
+
+.post-select {
+    position: relative !important;
+    top: 10px;
+    right: 160px;
+    max-height: 61vh !important;
 }
 
 .example-card {
@@ -371,6 +386,9 @@
     font: bold 14px/21px Georgia, serif;
     margin: 0 5px 0 0;
     color: #606770;
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .card-post-footer {
