--- a/src/app/modules/user/user/user.component.css
+++ b/src/app/modules/user/user/user.component.css
@@ -173,3 +173,9 @@ label:active:after {
 .pointer {
     cursor: pointer;
 }
+
+.user-img {
+    width: 33px;
+    height: 33px;
+    margin: 0 20px 0 0
+}
