--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -33,17 +33,11 @@
           </td>
         </ng-container>
 
-        <!-- ID Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-          <td mat-cell *matCellDef="let row"> #{{row.id}} </td>
-        </ng-container>
-
         <!-- Progress Column -->
         <ng-container matColumnDef="profilePicture">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-          <td mat-cell *matCellDef="let row">
-            <img src={{row.profilePicture}} /> </td>
+          <td mat-cell *matCellDef="let row" class="user-img">
+            <img class="user-img" src={{row.profilePicture}} /> </td>
         </ng-container>
 
         <!-- Name Column -->
@@ -111,9 +105,12 @@
           </mat-checkbox> All the elements
         </div>
         <mat-select [(value)]="selectAction" class="footer-select">
+          <mat-option value="">Choose An Option </mat-option>
+          <mat-option value="enable">Enable</mat-option>
+          <mat-option value="disbale">Disbale</mat-option>
           <mat-option value="delete">Delete</mat-option>
         </mat-select>
-        <button mat-raised-button class="btn-create footer-btn"> OK </button>
+        <button mat-raised-button class="btn-create footer-btn" [disabled]="selectAction===''"> OK </button>
       </div>
       <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"> </mat-paginator>
     </div>
